go-router/main/default/objects/Go_Router_Log__c/Go_Router_Log__c.object-meta.xml
<CustomObject>
    <description>Usage Log for Go Router tool.</description>
    <label>Go Router Log</label>
    <nameField>
        <displayFormat>GR-{000000}</displayFormat>
        <label>Go Router Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Go Router Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>