go-router/main/default/objects/Go_Router_Log__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>The Input passed into the Go Router request</description>
    <label>Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>