go-router/main/default/objects/Go_Router_Log__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>The Key value passed into the Go Router request</description>
    <label>Key</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>