go-router/main/default/objects/Go_Router_Log__c/fields/Matched_On_Input__c.field-meta.xml
<CustomField>
    <fullName>Matched_On_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox determining if Go Router found a match based on input provided</description>
    <label>Matched On Input?</label>
    <type>Checkbox</type>
</CustomField>