go-router/main/default/objects/Go_Router_Log__c/validationRules/Prevent_Modifying.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Modifying</fullName>
    <active>true</active>
    <description>Prevent Go Router Logs from being modified</description>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Go Router Logs cannot be modified after creation</errorMessage>
</ValidationRule>