go-router/main/default/objects/Go_Router_Log__c/listViews/All_Logs.listView-meta.xml
<ListView>
    <fullName>All_Logs</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>Key__c</columns>
    <columns>Input__c</columns>
    <columns>Matched_On_Input__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>